--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 50px;
+  padding-top: 100px;
 }
 .starter-template {
   padding: 40px 15px;
@@ -11,6 +11,11 @@ body {
   background-repeat: no-repeat;
   position: relative;
   display: inline-block;
-  width: 1.33333333em;
+  width: 5.33333333em;
   line-height: 1em;
+  margin: 40px;
+}
+
+.logo {
+  margin: 50px;
 }
