--- a/templates/role.html
+++ b/templates/role.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Lavoro</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+{% include 'layout.html' %}
 <body>
 
 	<div class="starter-template">
 		<div class="container">
 		  <div class="row">
-			  <button type="button" class="btn">FIND</button>
-			  <button type="button" class="btn">POST</button>
+		  	  <div class="role-type">
+				  <a href="/find" class="btn-lg btn-success" role="button">FIND</a>
+				  <a href="/post" class="btn-lg btn-primary" role="button">POST</a>
+			  </div>
 		</div>
 		<div class="logo">
 			<button type="button" class="btn btn-default">Logo Here</button>
