--- a/frontend/templates/role.html
+++ b/frontend/templates/role.html
@@ -6,7 +6,7 @@
 		<div class="container">
 		  <div class="row">
 		  	  <div class="role-type">
-				  <a href="/find" class="btn-lg btn-success" role="button">FIND</a>
+				  <a href="/skills" class="btn-lg btn-success" role="button">FIND</a>
 				  <a href="/post" class="btn-lg btn-primary" role="button">POST</a>
 			  </div>
 		</div>
