--- a/frontend/templates/skills.html
+++ b/frontend/templates/skills.html
@@ -5,71 +5,48 @@
     <div class="container">
 
       <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1>
+      <form method="post">
+        <div class="row text-center text-lg-left">
 
-      <div class="row text-center text-lg-left">
-
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-          </a>
-        </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="1"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="2"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="3"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="4"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="5"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="6"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="7"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="8"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="9"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="10"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="11"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="12"> S1<br>
+          </div>
       </div>
-
+    <input type="submit" value="Submit">
+    </form>
     </div>
     <!-- /.container -->
 </body>
