--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -57,15 +57,18 @@
       'Thanks for logging in, ' + response.id + '!';
       $.ajax({
         dataType: 'json',
-        type:"POST",
-        url: "/login",
+        type: "POST",
+        url: "/login_post",
         data: JSON.stringify(response.id, null, '\t'),
         contentType: 'application/json;charset=UTF-8',
         crossDomain: true,
-        success: function(data){alert(data)}
+        success: function(response2){window.location.href='/role'},
+        error: function(xhr, ajaxOptions, thrownError){console.log(xhr.responseText)}
       });
     });
   }
+
+  //checkLoginState();
   </script>
   
 </body>
