finish user flows

--- a/frontend/templates/role.html
+++ b/frontend/templates/role.html
@@ -7,7 +7,7 @@
 		  <div class="row">
 		  	  <div class="role-type">
 				  <a href="/skills" class="btn-lg btn-success" role="button">FIND</a>
-				  <a href="/post" class="btn-lg btn-primary" role="button">POST</a>
+				  <a href="/skills_want" class="btn-lg btn-primary" role="button">POST</a>
 			  </div>
 		</div>
 		<div class="logo">
