--- a/frontend/templates/skills.html
+++ b/frontend/templates/skills.html
@@ -4,7 +4,7 @@
 <!-- Page Content -->
     <div class="container">
 
-      <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1>
+      <h1 class="my-4 text-center text-lg-left">{{title}}</h1>
       <form method="post">
         <div class="row text-center text-lg-left">
 
