--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,16 +6,16 @@
 		<div class="container">
 		  <div class="row">
 			  <div class="col-sm-3">
-			  	<a href="/login"><img class="flag" src="{{ url_for('static', filename='it.svg') }}"></a>
+			  	<a href="/login_it"><img class="flag" src="{{ url_for('static', filename='it.svg') }}"></a>
 			  </div>
 			  <div class="col-sm-3">
-			  	<a href="/login"><img class="flag" src="{{ url_for('static', filename='gb.svg') }}"></a>
+			  	<a href="/login_gb"><img class="flag" src="{{ url_for('static', filename='gb.svg') }}"></a>
 			  </div>
 			  <div class="col-sm-3">
-			  	<a href="/login"><img class="flag" src="{{ url_for('static', filename='sy.svg') }}"></a>
+			  	<a href="/login_sy"><img class="flag" src="{{ url_for('static', filename='sy.svg') }}"></a>
 			  </div>
 			  <div class="col-sm-3">
-			  	<a href="/login"><img class="flag" src="{{ url_for('static', filename='es.svg') }}"></a>
+			  	<a href="/login_es"><img class="flag" src="{{ url_for('static', filename='es.svg') }}"></a>
 			  </div>
 			</div>
 		</div>
