--- a/frontend/templates/skills.html
+++ b/frontend/templates/skills.html
@@ -44,6 +44,18 @@
           <div class="col-lg-3 col-md-4 col-xs-6">
             <input type="checkbox" name="skill" value="11"> S1<br>
           </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="12"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="13"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="14"> S1<br>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <input type="checkbox" name="skill" value="15"> S1<br>
+          </div>
       </div>
     <input type="submit" value="Submit">
     </form>
