fix value names

--- a/frontend/templates/skills.html
+++ b/frontend/templates/skills.html
@@ -64,97 +64,97 @@ label img {
       <form method="post">
         <div class="row text-center text-lg-left">
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="0" id="cb0">
+            <input type="checkbox" name="skill" value="Hairdressers" id="cb0">
             <label for="cb0"><img src="/static/hairdresser.jpg" /> </label>
             Hairdresser
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="1" id="cb1">
+            <input type="checkbox" name="skill" value="Agricultural Work" id="cb1">
             <label for="cb1"><img src="/static/agriculture.jpeg" /> </label>
             Agricultural Work
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="2" id="cb2">
+            <input type="checkbox" name="skill" value="Child Caregiver" id="cb2">
             <label for="cb2"><img src="/static/child-caregiver.jpg" /> </label>
             Child Caregiver
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="3" id="cb3">
+            <input type="checkbox" name="skill" value="Cook" id="cb3">
             <label for="cb3"><img src="/static/cook.jpg" /> </label>
             Cook
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="4" id="cb4">
+            <input type="checkbox" name="skill" value="Driver" id="cb4">
             <label for="cb4"><img src="/static/driver.jpg" /> </label>
             Driver
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="5" id="cb5"> 
+            <input type="checkbox" name="skill" value="Elderly Caregiver" id="cb5"> 
             <label for="cb5"><img src="/static/elderly-caregiver.jpeg" /> </label>
             Elderly Caregiver
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="6" id="cb6">
+            <input type="checkbox" name="skill" value="Electrician" id="cb6">
             <label for="cb6"><img src="/static/electrician.jpeg" /> </label>
             Electrician
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="7" id="cb7">
+            <input type="checkbox" name="skill" value="Fishing" id="cb7">
             <label for="cb7"><img src="/static/fishing.jpeg" /> </label>
             Fishing
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="8" id="cb8">
+            <input type="checkbox" name="skill" value="Handicraft and Printing Workers" id="cb8">
             <label for="cb8"><img src="/static/handicraft.jpeg" /> </label>
             Handicraft
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="9" id="cb9">
+            <input type="checkbox" name="skill" value="Cleaning" id="cb9">
             <label for="cb9"><img src="/static/housekeeper.jpeg" /> </label>
             Cleaner
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="10" id="cb10">
+            <input type="checkbox" name="skill" value="Metal and Machinery" id="cb10">
             <label for="cb10"><img src="/static/metal-worker.jpeg" /> </label>
             Metal Worker
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="11" id="cb11">
+            <input type="checkbox" name="skill" value="Office Clerk" id="cb11">
             <label for="cb11"><img src="/static/office-clerk.jpg" /> </label>
             Office Clerk
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="12" id="cb12">
+            <input type="checkbox" name="skill" value="Sales Workers" id="cb12">
             <label for="cb12"><img src="/static/sales-worker.jpg" /> </label>
             Sales Worker
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="13" id="cb13">
+            <input type="checkbox" name="skill" value="Travel Guide" id="cb13">
             <label for="cb13"><img src="/static/tour-guide.jpg" /> </label>
             Tour Guide
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="14" id="cb14">
+            <input type="checkbox" name="skill" value="Waiter/Waitress" id="cb14">
             <label for="cb14"><img src="/static/waiter.jpg" /> </label>
             Waiter
             <br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="15" id="cb15">
+            <input type="checkbox" name="skill" value="Accountant" id="cb15">
             <label for="cb15"><img src="/static/accountant.jpeg" /> </label>
             Accountant
             <br>
