--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,23 +4,29 @@
 
 	<div class="starter-template">
 		<div class="container">
+			Select Language
 		  <div class="row">
 			  <div class="col-sm-3">
-			  	<a href="/login_it"><img class="flag" src="{{ url_for('static', filename='it.svg') }}"></a>
+			  	<a href="/login_it"><img class="flag" src="{{ url_for('static', filename='italy-circle.png') }}"></a>
+			  	<br>
+			  	Italiano
 			  </div>
 			  <div class="col-sm-3">
-			  	<a href="/login_gb"><img class="flag" src="{{ url_for('static', filename='gb.svg') }}"></a>
+			  	<a href="/login_gb"><img class="flag" src="{{ url_for('static', filename='us-circle.png') }}"></a>
+			  	<br>
+			  	English
 			  </div>
 			  <div class="col-sm-3">
-			  	<a href="/login_sy"><img class="flag" src="{{ url_for('static', filename='sy.svg') }}"></a>
+			  	<a href="/login_sy"><img class="flag" src="{{ url_for('static', filename='syria-circle.png') }}"></a>
+			  	<br>
+			  	Arabic
 			  </div>
 			  <div class="col-sm-3">
-			  	<a href="/login_es"><img class="flag" src="{{ url_for('static', filename='es.svg') }}"></a>
+			  	<a href="/login_es"><img class="flag" src="{{ url_for('static', filename='spain-circle.png') }}"></a>
+			  	<br>
+			  	Espanol
 			  </div>
 			</div>
-		</div>
-		<div class="logo">
-			<button type="button" class="btn btn-default">Logo Here</button>
 		</div>
 	</div>
 
