--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 {% include 'layout.html' %}
 <body>
+  <div class="starter-template">
+  You're a few steps away from work!
+  </div>
+
+  <div class="starter-template">
 	<div id="fb-root"></div>
   <div class="container">
     <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
   </div>
+</div>
 
   <script>(function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
