--- a/frontend/templates/skills.html
+++ b/frontend/templates/skills.html
@@ -104,10 +104,10 @@
             <br>
           </div>
       </div>
-    <br>
     <center>
-    <input type="submit" value="Submit">
-  </center>
+    <button type="submit" class="btn btn-lg">Submit</button>
+    <br>
+    </center>
     </form>
     </div>
     <!-- /.container -->
