--- a/frontend/templates/user_info.html
+++ b/frontend/templates/user_info.html
@@ -43,7 +43,9 @@
         </div>
     </div>
     {%endif%}
+    <center>
     <button type="submit" class="btn btn-lg">Submit</button>
+  </center>
   </div>
       </form>
     <script>
