--- a/frontend/templates/layout.html
+++ b/frontend/templates/layout.html
@@ -24,6 +24,10 @@
         <a class="navbar-brand" href="/"><img style="	width: 64px;" src="static/logo.png" alt="Lavoro">Lavoro
         </a>
       </div>
+      <div id="navbar5" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/dashboard" style="color: white">Dashboard</a></li>
+         </ul>
       <!--/.nav-collapse -->
     </div>
     <!--/.container-fluid -->
