fixed params for post requests

--- a/frontend/templates/skills.html
+++ b/frontend/templates/skills.html
@@ -9,43 +9,43 @@
         <div class="row text-center text-lg-left">
 
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="0"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="1"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="2"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="3"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="4"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="5"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="6"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="7"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="8"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="9"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="10"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-            <input type="checkbox" name="skill" value="11"> S1<br>
+            <input type="checkbox" name="skill" value="Accountant"> S1<br>
           </div>
       </div>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Accountantubmit">
     </form>
     </div>
     <!-- /.container -->
