--- a/frontend/templates/user_info.html
+++ b/frontend/templates/user_info.html
@@ -59,15 +59,7 @@
       };
 
       function initAutocomplete() {
-        // Create the autocomplete object, restricting the search to geographical
-        // location types.
-        autocomplete = new google.maps.places.Autocomplete(
-            /** @type {!HTMLInputElement} */(document.getElementById('autocomplete')),
-            {types: ['geocode']});
-        console.log("init autocomplete");
-
-        // When the user selects an address from the dropdown, populate the address
-        // fields in the form.
+        autocomplete = new google.maps.places.Autocomplete((document.getElementById('autocomplete')));
       }
 
 
